# takedouble

./: .gitignore  CHANGELOG.md  CONTRIBUTORS.md  LICENSE  README.md  default.nix  takedouble.cabal
app/: Main.hs
nix/: sources.json
src/: Takedouble.hs
test/: Main.hs
