name:                takedouble
synopsis:            duplicate file finder
version:             0.0.1.0
homepage:            https://github.com/shapr/takedouble
license:             BSD3
author:              Shae Erisson
maintainer:          Shae Erisson
copyright:           Shae Erisson
category:            Utilities
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Takedouble
  ghc-options:         -Wall -fno-warn-name-shadowing -O2
  build-depends:       base >= 4.11 && < 5
                     , bytestring
                     , directory
                     , extra
                     , filepath

executable takedouble
  main-is:            Main.hs
  hs-source-dirs:     app
  default-language:   Haskell2010
  ghc-options:        -threaded -O2 -rtsopts "-with-rtsopts=-N -qg"
  build-depends:      base
                    , takedouble

test-suite takedouble-tests
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  default-language: Haskell2010
  ghc-options:      -Wall -threaded
  build-depends:    base >=4.11 && < 5
                  , takedouble
                  , hedgehog
